--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,15 +95,10 @@ const practiceThumb02 = '/girls/girls01.png'
         />
       </div>
     </Section>
-    <Section heading="reproduction">
-      <div class="cards">
-        <!-- <CardWorks
-          title="side scroll"
-          description="animation practice01"
-          thumbnail={animationThumb01}
-          url="/animation/practice01"
-        /> -->
-      </div>
+    <Section heading="comments">
+      <p>
+        主にJavaScriptを使ったアニメーションの練習です。webGLを使ったアニメーションについては別途githubにまとめています。
+      </p><a href="https://github.com/yukaorange">https://github.com/yukaorange</a>
     </Section>
   </Main>
 </Layout>
